# slugfiles

./: Cargo.toml  README.md  justfile
.github/actions/build-bin/: action.yml
.github/workflows/: release.yaml
src/: main.rs
